welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:44: error: Unmatched closing brace '}' ignored here
}
^Array1:48: error: eof expected but '}' found.
}
^